@@ -1,3 +1,9 @@
+2006-08-25  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ipipe.py (ils): Add arguments dirs and files to
+	the constructor, this makes it possible to get a list of only directories
+	or only files.
+
 2006-08-12  Ville Vainio  <vivainio@gmail.com>
 
 	* Fakemodule.py, OInspect.py: Reverted 2006-08-11 mods,
